# ordinal-predictions

./: .gitignore  README.md  config.ini  flake.nix  pyproject.toml
src/: __main__.py  bigquery_fetch.py  create_model.py  create_plot.py  create_predictions.py  fetch.py  fetch_from_table.py  load_dataframe.py  model.py  plot.py  save_to_table.py  store.py
