[tool.poetry]
name = "ordinal-predictions"
version = "0.1.0"
description = ""
authors = ["Ethan Thoma <ethanthoma@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

